fbstyles.css
/* ... */
@media (max-width:460px) {
    .subGroup {
        width: 100%
    }
    #fb_logo1 {
        display: none
    }
    #fb_logo2 {
        display: block
    }
    #site-brand {
        width: 25%
    }
    #search_form_section {
        width: 75%
    }
    #mainlogo {
        background-image: url(fb-logo2.png);
        height: 50px;
        width: 50px
    }
}

.fb-searchbar {
    position: relative;
    width: 100%;
    float: left
}

.fb-searchbar input[type=search] {
    border: 1px solid #e0e0e0;
    background: #fff;
    color: #535353;
    font-size: 24px;
    padding: 0 20px;
    line-height: 18px;
    height: 60px;
    box-sizing: border-box;
    width: 90%;
    position: relative;
    font-family: 'Muller', 'Helvetica Neue', Helvetica, sans-serif;
    font-weight: 700;
}

@media (min-width:640px) {
    .fb-searchbar input[type=search] {
        width: 90%;
    }
}

.fb-searchbar input[type=search]:focus {
    outline: 0;
    background-color: #fff;
    border-color: #6D6D6D
}

/*

.fb-searchbar input[type=search]::-webkit-input-placeholder {
    font-style: italic
}

.fb-searchbar input[type=search]:-moz-placeholder {
    font-style: italic
}

.fb-searchbar input[type=search]::-moz-placeholder {
    font-style: italic
}

.fb-searchbar input[type=search]:-ms-input-placeholder {
    font-style: italic
}

*/

.fb-searchbar .fb-btn {
    border: none;
    -webkit-appearance: none;
    outline: 0;
    text-decoration: none;
    font-weight: 400;
    font-size: 16px;
    text-align: center;
    padding: 0px 20px 0 0;
    height: 60px;
    width: 10%;
    float: right;
    position: relative;
    margin: 0;
}

@media (min-width:640px) {
    .fb-searchbar .fb-btn {
        width: 10%;
        margin-top: 0px;
    }
}

.fb-searchbar .fb-btn:before {
    content: "\f002";
    font-family: FontAwesome;
    font-style: normal;
    font-weight: 400;
    text-decoration: inherit;
    padding-right: .7em;
    position: absolute;
    top: 14px;
    right: auto;
    font-size: 1.5em;
}

@media (min-width:640px) {
    .fb-searchbar .fb-btn:before {
        /* right:33px */
    }
}

.search-btn-text {
    display: none
}

@media (min-width:640px) {
    .search-btn-text {
        display: none;
    }
}

/* Custom Entries */

.staff-details h2 {
    margin: 0 0 10px 0;
}

.staff-details h3 {
    margin: 0 0 30px 0;
    font-size: 1.2em;
    color: #2D5BA9;
}

.staff-details p {
    margin: 0 0 10px 0;
}

.staff-details p a {
    color: #535353;
    text-decoration: none;
}

.tt-menu {
    position: absolute;
    background: #fff;
    color: inherit;
    top: 100%;
    left: 0;
    z-index: 100;
    display: block;
    right: 10%
}

@media (min-width:640px) {
    .tt-menu {
        right: 25%
    }
}

 .tt-menu h2 {
    border-left: 1px solid;
    border-right: 1px solid;
    margin: 0;
    padding: 10px 15px
}

.tt-suggestion {
    border-bottom: 1px dashed #A4A4A4
}

.tt-suggestion.tt-cursor a {
    background-color: #F8F8F8;
    color: #4c4c4c
}

.tt-suggestions a {
    padding: 10px 15px;
    box-sizing: border-box;
    width: 100%;
    display: block;
    background-color: #fff;
    color: #4c4c4c;
    text-decoration: none
}

.tt-suggestions a:active, .tt-suggestions a:focus, .tt-suggestions a:hover {
    outline: 0;
    background-color: #F8F8F8;
    border-color: #4c4c4c
}

.twitter-typeahead {
    width: 90%
}

@media (min-width:640px) {
    .twitter-typeahead {
        width: 90%
    }
}

.twitter-typeahead input[type=search] {
    width: 100%
}

@media (min-width:640px) {
    .twitter-typeahead input[type=search] {
        width: 100%
    }
}

.twitter-typeahead .tt-menu {
    right: 0!important
}

@media (min-width:640px) {
    .twitter-typeahead .tt-menu {
        right: 0!important
    }
}

.empty-message, .ui-helper-hidden-accessible {
    position: absolute;
    overflow: hidden;
    clip: rect(0 0 0 0);
    height: 1px;
    width: 1px;
    margin: -1px;
    padding: 0;
    border: 0
}

.fb-message {
    display: inline-block;
    zoom: 1.3;
    float: left;
    width: 100%;
    padding: 10px 0 20px 0;
}

.fb-message.skim-left {
    padding-left: 0
}

.fb-message.skim-right {
    padding-right: 0
}

.fb-message__emphasize {
    padding: 10px 0;
    font-size: 1.3em
}

.fb-message__emphasize .fa {
    padding-right: 5px
}

.fb-message__spacing {
    padding: 10px 0;
}

.fb-message__question {
    position: relative
}

.fb-message__question:before {
    content: "";
    font-family: FontAwesome;
    font-style: normal;
    font-weight: 400;
    text-decoration: inherit
}

.fb-message__blending {
    padding: 5px 0 0
}

.fb-message--expanded {
    color: #999;
}

.fb-alert-message {
    margin: 0 0 40px;
    color: inherit;
}

.fb-alert-message ul {
    list-style-type: none;
    padding-left: 20px;
}

.fb-alert-message li {
    background-image: url(https://www.yorksj.ac.uk/media/development-assets/build-svgs/bullet.svg);
    background-repeat: no-repeat;
    background-position: 0 2px;
    margin: 11px 0;
    padding-left: 20px;
}

.fb-results {
    margin: 20px 0
}

@media (min-width:740px) {
    .fb-results {
        margin: 0
    }
}

.fb-results-list {
    list-style: none;
    margin: 0;
    padding: 0
}

.fb-results-list>li {
    border-bottom: 1px dashed #A4A4A4;
    padding: 25px 0;
}

.fb-results-list>li.fb-result--curator {
    border-bottom: 0 none;
    padding-bottom: 0
}

.fb-results-list:first-of-type:not(:only-of-type) li:last-of-type {
    border-bottom: 0 none
}

.fb-result__image {
    display: inline-block;
    zoom: 1;
    float: left;
    padding-left: 1em;
    padding-right: 1em;
    width: 30%;
    overflow: hidden;
    height: 100px
}

.fb-result__image.skim-left {
    padding-left: 0
}

.fb-result__image.skim-right {
    padding-right: 0
}
/* ... */

